authservice tests are added